# Pokemon-Data-Explorer

fluent_python/doctest/: M.py  README.md
fluent_python/freestyle/: bike.py
fluent_python/special_methods/: e1.ipynb  e1.py  frenchDeck.ipynb
projects/AI/my-first-rag-pipeline/: README.md  main.py  pyproject.toml  walthrough_adapted_to_g1_news.ipynb
projects/dbt_experiments/: requirements.txt
projects/dbt_experiments/dbt_experiments/: dbt_project.yml
projects/dbt_experiments/dbt_experiments/models/pokemon/: pokemons_merge.sql
projects/dbt_experiments/pokemon/: pokemon_extract_and_load.py  updates.sql
projects/streamlit/: README.md
python_tools/streamlit/: my_first_streamlit_app.py
