[tool.poetry]
name = "my-first-rag-pipeline"
version = "0.1.0"
description = "Get hands on experience on RAG pipeline, enabling more **feasible understanding of the potential use cases** in which that tecnique could have a good fit."
authors = ["Caio Lauro <caiolauro@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.1.10"
langchain-community = "^0.0.25"
langchainhub = "^0.1.14"
langchain-openai = "^0.0.8"
chromadb = "^0.4.24"
bs4 = "^0.0.2"
jupyter = "^1.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
